fixed alignment

--- a/app/assets/stylesheets/components/_task-template-card.scss
+++ b/app/assets/stylesheets/components/_task-template-card.scss
@@ -1,6 +1,5 @@
 .task-template-card {
   height: 40px;
-  min-width: 500px;
   background-color: white;
   margin: 0;
   display: flex;
